--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="mid_grey">#40808080</color>
     <color name="nev_item">#ffffffff</color>
     <color name="background_light">#fafafa</color>
+    <color name="divider">#1f000000</color>
+    <color name="content_placeholder">#ffe0e0e0</color>
+    <color name="nav_item">#ffffff</color>
 </resources>
