--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="divider">#1f000000</color>
     <color name="content_placeholder">#ffe0e0e0</color>
     <color name="nav_item">#ffffff</color>
+    <color name="status_bar_back">#ff676767</color>
 </resources>
