1. 优化界面 2. 三星Galaxy s6中 webView显示空白

--- a/app/src/main/res/layout/zhihu_item_layout.xml
+++ b/app/src/main/res/layout/zhihu_item_layout.xml
@@ -4,6 +4,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="@drawable/mid_grey_ripple"
+    android:stateListAnimator="@animator/raise"
     android:paddingTop="1dp"
     android:paddingBottom="1dp">
 
