--- a/app/src/main/res/layout/zhihu_detail_layout.xml
+++ b/app/src/main/res/layout/zhihu_detail_layout.xml
@@ -63,10 +63,10 @@
             </WebView>
 
             <!--解决nestView无法滑倒低端-->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="@color/background_light"/>
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="250dp"-->
+                <!--android:background="@color/background_light"/>-->
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
