1. 增加了google服务中的map服务和location服务 2. 增加了无网情况下的提示 3. 增加了桌面小部件，但仍在完善

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,7 +28,7 @@
             android:background="?attr/colorPrimary"
             android:elevation="1dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlways|snap"/>
+            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"/>
     </FrameLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -36,6 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/location" />
 
 </android.support.design.widget.CoordinatorLayout>
