--- a/app/src/main/res/layout/news_detail_layout.xml
+++ b/app/src/main/res/layout/news_detail_layout.xml
@@ -38,7 +38,8 @@
                 android:outlineProvider="none"
                 android:elevation="1dp"
                 android:background="#3b000000"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                app:title="@string/wangyinews"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
