--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -10,11 +10,11 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_image_id"
-        android:layout_width="93dp"
+        android:layout_width="96dp"
         android:layout_height="24dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:elevation="2dp"
         android:foreground="@drawable/mid_grey_ripple"
         android:stateListAnimator="@animator/raise"
