--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,10 +5,14 @@
         <item
             android:id="@+id/nav_zhihu"
             android:icon="@drawable/zhihu"
-            android:title="知乎头条" />
+            android:title="@string/zhihu" />
         <item
             android:id="@+id/nav_wangyi"
             android:icon="@drawable/wangyi"
-            android:title="网易新闻" />
+            android:title="@string/wangyinews" />
+        <item
+            android:id="@+id/nav_history"
+            android:icon="@drawable/history"
+            android:title="@string/history"/>
     </group>
 </menu>
