--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -12,7 +12,7 @@
         android:id="@+id/item_image_id"
         android:layout_width="96dp"
         android:layout_height="24dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:elevation="2dp"
@@ -30,9 +30,9 @@
     <TextView
         android:id="@+id/item_text_id"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:stateListAnimator="@animator/raise"
@@ -45,11 +45,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="7dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
             android:stateListAnimator="@animator/raise"
             android:textColor="@color/text_source"
-            android:textSize="10sp"
+            android:textSize="12sp"
             />
         </LinearLayout>
 
