1. 增加了Activity之间的transition 2. 增加桌面widget，并通过service后台定时请求网络数据，并显示在widget上，间隔为15分钟 3. 修改了部分界面样式

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -27,6 +27,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:elevation="1dp"
+            android:contentDescription="@string/tool_bar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"/>
     </FrameLayout>
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/map"
         app:srcCompat="@drawable/location" />
 
 </android.support.design.widget.CoordinatorLayout>
