--- a/app/src/main/res/layout/zhihu_detail_layout.xml
+++ b/app/src/main/res/layout/zhihu_detail_layout.xml
@@ -29,7 +29,8 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/picture"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/dt_toolbar"
