--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-
+    <color name="immersive_bars">#99000000</color>
     <color name="text_color">#f6000000</color>
     <color name="text_source">#732b2828</color>
     <color name="diver">#1f000000</color>
@@ -24,4 +24,15 @@
     <color name="content_placeholder">#ffe0e0e0</color>
     <color name="nav_item">#ffffff</color>
     <color name="status_bar_back">#ff676767</color>
+    <!-- dribbble -->
+    <color name="dribbble">#fff06292</color> <!-- pink 300 -->
+    <color name="dribbble_dark">#ec407a</color> <!-- pink 400 -->
+    <color name="dribbble_super_dark">#ff33292d</color>
+    <color name="dribbble_link_highlight">#b3f06292</color>
+    <color name="fab_heart_progress_bar">#deffffff</color> <!-- 87% white-->
+    <color name="fab_heart_full">#ffffffff</color>
+    <color name="gif_badge_light_image">#40000000</color>
+    <color name="gif_badge_dark_image">#b3ffffff</color>
+    <color name="scrim">#99323232</color>
+
 </resources>
