--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="card_margin">16dp</dimen>
     <dimen name="grid_item_margin">1px</dimen>
     <dimen name="divider_height">1px</dimen>
+    <dimen name="touched_app_bar">8dp</dimen>
+    <dimen name="z_app_bar">4dp</dimen>
+    <dimen name="touch_raise">6dp</dimen>
 </resources>
